# TheEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  premake5.lua
resource/shader/: fragment.glsl  vertex.glsl
resource/shader/basic/: fragment.glsl  vertex.glsl
resource/shader/flatColor/: fragment.glsl  vertex.glsl
resource/shader/lighting3d/: fragment.glsl  vertex.glsl
resource/shader/lighting_Phong/: fragment.glsl  vertex.glsl
resource/shader/phong/: fragment.glsl  vertex.glsl
resource/shader/pos4d_color3d/: fragment.glsl  readme.md  vertex.glsl
resource/shader/texture/: fragment.glsl  shader.metal  vertex.glsl
src/: config.h  engine.h  lib.makefile  src.makefile  tags
src/backend/: backend.h  makefile  renderer.h
src/backend/MTL/: MTLbuffer.cpp  MTLbuffer.h  MTLbuffer.mm  MTLcontext.cpp  MTLcontext.h  MTLcontext.mm  MTLdataType.h  MTLframeBuffer.cpp  MTLframeBuffer.h  MTLframeBuffer.mm  MTLrenderAPI.cpp  MTLrenderAPI.h  MTLrenderAPI.mm  MTLshader.cpp  MTLshader.h  MTLshader.mm  MTLtexture.cpp  MTLtexture.h  MTLtexture.mm  MTLvertexArray.cpp  MTLvertexArray.h  MTLvertexArray.mm  MetalBuffer.h  MetalBuffer.mm  MetalContext.h  MetalContext.mm  MetalFrameBuffer.h  MetalFrameBuffer.mm  MetalRenderAPI.h  MetalRenderAPI.mm  MetalShader.h  MetalShader.mm  MetalShaderTypes.h  MetalTexture.h  MetalTexture.mm  MetalVertexArray.h  MetalVertexArray.mm  readme.md
src/backend/Metal/: MTLcontext.h  MTLcontext.mm
src/backend/opengl/: GLbuffer.cpp  GLbuffer.h  GLcontext.cpp  GLcontext.h  GLdataType.h  GLframeBuffer.cpp  GLframeBuffer.h  GLmacro.cpp  GLmacro.h  GLrender.cpp  GLrender.h  GLrenderAPI.cpp  GLrenderAPI.h  GLshader.cpp  GLshader.h  GLtexture.cpp  GLtexture.h  GLvertexArray.cpp  GLvertexArray.h  camera.cpp  camera.h  indexBuffer.h  shader.cpp  texture.h  vertexArray.h  vertexBufferLayout.cpp  vertexBufferLayout.h
src/core/: GLmacro.cpp  GLmacro.h  app.cpp  app.h  camera.cpp  camera.h  config.h  core.h  entry.h  indexBuffer.cpp  makefile  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h  window.h
src/core/application/: app.cpp  app.h  appBase.h  appMetal.h  appMetal.mm  appOpenGL.cpp  appOpenGL.h
src/core/event/: appEvents.h  baseEvent.h  event.h  keyEvents.h  mouseEvents.h
src/core/imgui/: GLimguiLayer.cpp  GLimguiLayer.h  MTLimguiLayer.h  MTLimguiLayer.mm  imguiClassExtension.h  imguiLayer.cpp  imguiLayer.h
src/core/input/: codes.h  input.cpp  input.h
src/core/layer/: layer.cpp  layer.h  layerStack.cpp  layerStack.h
src/core/math/: matrixMath.cpp  matrixMath.h
src/core/panel/: hierarchyPanel.cpp  hierarchyPanel.h
src/core/renderer/: buffer.cpp  buffer.h  camera.h  (+23 more)
src/editor/: editorCamera.cpp  editorCamera.h  editorLayer.cpp  editorLayer.h  makefile
src/glad/: glad.c  makefile
src/imgui/: imconfig.h  imgui_common_build.cpp  imgui_glfw_metal_build.mm  imgui_glfw_opengl3_build.cpp  makefile
src/main/: main.cpp  makefile
src/platform/: glfwInput.cpp  glfwInput.h  glfw_types.h  macWindow.cpp  macWindow.h  makefile  platform.h
src/tests/: cameraMovement.cpp  clearColor.cpp  coloredCube.cpp  lighting.cpp  makefile  test.cpp  test.h
src/util/: log.cpp  log.h  makefile
(+37 files in other folders)
